--- a/Botsite/botsite/css/style.css
+++ b/Botsite/botsite/css/style.css
@@ -3,7 +3,6 @@ body {
     color: white;
     width: 100%;
     padding-top: 50px;
-    margin-top: 20px;
     font-size: 18px;
     font-family: 'Roboto Slab', serif;
   }
@@ -17,7 +16,7 @@ body {
   }
   
   a:hover, a:focus, a:active {
-    text-decoration: none;
+    text-decoration: none !important;
     color: white;
     transition: color 0.8s;
   }
@@ -44,19 +43,20 @@ body {
     padding: 30px;
     background-color: whitesmoke;
     margin-top: 40px;
-    margin-left: 75px;
+
   }
   
   .btn:hover, .btn:active, .btn:focus {
     color: white !important;
     background-color: rgba(130, 247, 94, 0.938) !important;
     box-shadow: none;
+    letter-spacing: 0.1em !important;
   }
   
   ul {
     list-style-type: none;
-    padding: 0;
-    margin: 100px 0 0 100px;
+    padding: 0px;
+    margin: 380px 0 0 0 !important;
     float: right;
     white-space: nowrap;
     overflow: hidden;
@@ -69,8 +69,7 @@ body {
   #hidden {
     display: none;
   } 
-
-
+  
 
   @media only screen and (min-width:320px){
     .btn {
@@ -83,22 +82,27 @@ body {
       line-height: 30px;
       padding: 30px;
       background-color: whitesmoke;
-      margin-top: 40px;
-      margin-left: 65px;
+      margin: 60px 0 0 75px !important;
     }
-      ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 100px 0 0 100px;
-    float: right;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  li {
-    display: inline-block;
-    margin: 0 0 0 1px;
-  }
-  
+    .btn:hover, .btn:active, .btn:focus {
+      color: white !important;
+      background-color: rgba(130, 247, 94, 0.938) !important;
+      box-shadow: none;
+      letter-spacing: 0 !important;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 170px 0 0 0 !important;
+      float: right;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+    li {
+      display: block;
+      margin: 0 0 0 1px;
+    }
   }
 
   @media only screen and (min-width:340px){
@@ -112,10 +116,60 @@ body {
       line-height: 30px;
       padding: 30px;
       background-color: whitesmoke;
-      margin-top: 40px;
-      margin-left: 75px;
+      margin: 100px 0 0 85px !important;
+    }
+    .btn:hover, .btn:active, .btn:focus {
+      color: white !important;
+      background-color: rgba(130, 247, 94, 0.938) !important;
+      box-shadow: none;
+      letter-spacing: 0.1em !important;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 200px 0 0 0 !important;
+      float: right;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+    li {
+      display: block;
+      margin: 0 0 0 1;
     }
   }
+  @media only screen and (min-width:375px){
+    .btn {
+      border-radius: 15px;
+      width: 100%;
+      color: rgba(65, 235, 13, 0.938);
+      text-decoration: none;
+      border: 1px solid white !important;
+      transition: background 0.8s, color 0.8s;
+      line-height: 30px;
+      padding: 30px;
+      background-color: whitesmoke;
+      margin: 120px 0 0 95px !important;
+    }
+    .btn:hover, .btn:active, .btn:focus {
+      color: white !important;
+      background-color: rgba(130, 247, 94, 0.938) !important;
+      box-shadow: none;
+      letter-spacing: 0.1em !important;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 210px 0 0 0 !important;
+      float: right;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+    li {
+      display: block;
+      margin: 0 0 0 1px;
+    }
+  }
+
 
   @media only screen and (min-width:411px){
     .btn {
@@ -128,22 +182,26 @@ body {
       line-height: 30px;
       padding: 30px;
       background-color: whitesmoke;
-      margin-top: 40px;
-      margin-left: 125px;
+      margin: 160px 0 0 98px !important;
     }
-      ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 200px 0 0 0;      
-    float: right;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  li {
-    display: inline-block;
-    margin: 0 0 0 1px;
-  }
-  
+    .btn:hover, .btn:active, .btn:focus {
+      color: white !important;
+      background-color: rgba(130, 247, 94, 0.938) !important;
+      box-shadow: none;
+      letter-spacing: 0.1em !important;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 260px 0 0 0 !important;
+      float: right;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+    li {
+      display: inline-block;
+      margin: 0 0 0 1px;
+    }
   }
 
   @media only screen and (min-width: 768px){
@@ -158,24 +216,45 @@ body {
       padding: 30px;
       background-color: whitesmoke;
       margin-top: 40px;
-      margin-left: 240px;
     }
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 200px 0 0 0;
-    float: right;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  li {
-    display: inline-block;
-    margin: 0 0 0 1px;
-  }
-  
-
+    .btn:hover, .btn:active, .btn:focus {
+      color: white !important;
+      background-color: rgba(130, 247, 94, 0.938) !important;
+      box-shadow: none;
+      letter-spacing: 0.1em !important;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 300px 0 0 0 !important;
+      float: right;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+    li {
+      display: inline-block;
+      margin: 0 0 0 1px;
+    }
+    
   }
 @media only screen and (min-width: 1000px){
+
+  body {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    width: 100%;
+    padding-top: 50px;
+    font-size: 18px;
+    font-family: 'Roboto Slab', serif;
+  }
+  
+  h1 {
+    font-size: 3em !important;
+    line-height: 70px;
+    text-align: center;
+    margin: 0 0 0 450px;
+    font-weight: bold;
+  }
   .btn {
     border-radius: 15px;
     color: rgba(65, 235, 13, 0.938);
@@ -185,13 +264,18 @@ ul {
     line-height: 30px;
     padding: 30px;
     background-color: whitesmoke;
-    margin-top: 40px;
-    margin-left: 550px;
+    margin: 40px 0 0 20px !important;
+  }
+  .btn:hover, .btn:active, .btn:focus {
+    color: white !important;
+    background-color: rgba(130, 247, 94, 0.938) !important;
+    box-shadow: none;
+    letter-spacing: 0.1em !important;
   }
   ul {
     list-style-type: none;
     padding: 0;
-    margin: 200px 0 0 0;
+    margin: 250px 40px 0 0 !important;
     float: right;
     white-space: nowrap;
     overflow: hidden;
